--- a/Travel_Lib2/Travel_Lib2/Views/BookDetail/Index.cshtml
+++ b/Travel_Lib2/Travel_Lib2/Views/BookDetail/Index.cshtml
@@ -45,7 +45,7 @@
                         <div class="collapse navbar-collapse" id="navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li><a href="#">Профиль</a></li>
-                                <li class="active"><a href="@Url.Action("Index", "Home")">Книги</a></li>
+                                <li><a href="@Url.Action("Index", "Home")">Книги</a></li>
                                 <li><a href="#">Авторы</a></li>
                                 <li><a href="#">Новинки</a></li>
                                 <li><a href="#">Пользователи</a></li>
@@ -61,37 +61,21 @@
     <div class="container" data-bind="foreach: books">
         <div class="row book">
             <div class="col-md-3">
-                <img data-bind="attr:{src: BookImage}" />
+                <img data-bind="attr:{src: bookDetail().BookImage}" />
             </div>
             <div class="col-md-9">
-                <a href="" data-bind="click: $parent.getBookDetail">
-                    <h3><span data-bind="text: BookName"></span></h3>
-                </a>
-                <p><span data-bind="text: AuthorName"></span></p>
-                <p><span data-bind="text: Category"></span></p>
-                <p><span data-bind="text: Description"></span></p>
+                <h3><span data-bind="text: bookDetail().BookName"></span></h3>
+                <p><span data-bind="text: bookDetail().AuthorName">Автор: </span></p>
+                <p><span data-bind="text: bookDetail().Year">Год издания: </span></p>
+                <p><span data-bind="text: bookDetail().ISBN">ISBN: </span></p>
+                <p><span data-bind="text: bookDetail().Cover">Переплет: </span></p>
+                <p><span data-bind="text: bookDetail().Language">Язык: </span></p>
+                <p><span data-bind="text: bookDetail().Pages">Количество страниц: </span></p>
+                <p><span data-bind="text: bookDetail().Category">Категория: </span></p>
+                <p><span data-bind="text: bookDetail().Description">Описание: </span></p>
                 <small><a href="#" data-bind="click: $parent.deleteBook">Delete</a></small>
-
             </div>
         </div>
-    </div>
-    <div class="container">
-    <div class="row book">
-        <div class="col-md-3">
-            <img data-bind="attr:{src: bookDetail().BookImage}" />
-        </div>
-        <div class="col-md-9">
-            <h3><span data-bind="text: bookDetail().BookName"></span></h3>
-            <p><span data-bind="text: bookDetail().AuthorName">Автор: </span></p>
-            <p><span data-bind="text: bookDetail().Year">Год издания: </span></p>
-            <p><span data-bind="text: bookDetail().ISBN">ISBN: </span></p>
-            <p><span data-bind="text: bookDetail().Cover">Переплет: </span></p>
-            <p><span data-bind="text: bookDetail().Language">Язык: </span></p>
-            <p><span data-bind="text: bookDetail().Pages">Количество страниц: </span></p>
-            <p><span data-bind="text: bookDetail().Category">Категория: </span></p>
-            <p><span data-bind="text: bookDetail().Description">Описание: </span></p>
-        </div>
-    </div>
     </div>
 
     <div class="alert alert-danger" data-bind="visible: error"><p data-bind="text: error"></p></div>
